--- a/docs/save_kable_and_as_image.Rmd
+++ b/docs/save_kable_and_as_image.Rmd
@@ -61,4 +61,4 @@ kable(mtcars, "html") %>%
   as_image(width = 4)
 ```
 
-One problem with this method, especially if you are using it in `Word`, is that to the end, the product you made is a picture. Please let your readers know that they cannot select/edit the tables. :P
+Note that, by default, as_image saves to an temp file, which works for normal rmarkdown. However if you are using things like xaringan, which can't be a standalone html, you can specify the `file` option in `as_image` be the path you need, eg. "img/something.png"
