--- a/vignettes/best_practice_for_newline_in_latex_table.Rmd
+++ b/vignettes/best_practice_for_newline_in_latex_table.Rmd
@@ -4,11 +4,11 @@ author: "Hao"
 date: "`r Sys.Date()`"
 output: pdf_document
 header-includes:
+  - \usepackage{caption}
   - \usepackage{booktabs}
   - \usepackage{longtable}
   - \usepackage{array}
   - \usepackage{multirow}
-  - \usepackage[table]{xcolor}
   - \usepackage{wrapfig}
   - \usepackage{float}
   - \usepackage{colortbl}
@@ -63,7 +63,15 @@ dt2 <- data.frame(
 dt2 %>%
   mutate_all(linebreak) %>%
   kable("latex", booktabs = T, escape = F,
+        caption = "Main Title\\\\Subtitle",
         col.names = linebreak(c("Item\n(Name)", "Value\n(Number)"), align = "c"))
+```
+
+Note that linebreaks in table captions should be treated in a different way. You will need to insert the linebreak (`\\\\`) by yourself manually, which is easier than using `linebreak`. `linebreak` doesn't work because it put things in a `makecell`, which doesn't work in caption (as it's not a cell :P). At the same time, if you are using kableExtra 0.9.0 or any previous version, you need to load the `caption` package in LaTeX by yourself.
+
+```
+header-includes:
+  - \usepackage{caption}
 ```
 
 ### Linebreak in other kableExtra functions
