--- a/docs/awesome_table_in_html_cn.Rmd
+++ b/docs/awesome_table_in_html_cn.Rmd
@@ -131,7 +131,7 @@ kable(text_tbl, "html") %>%
 
 
 ## 行
-`row_spec`和`column_spec`差不多，除了没有列宽。注意，当你数第几行的时候，你不需要考虑表头和你通过`group_rows`添加的那些行，就数那些原生的“内容”行就行。
+`row_spec`和`column_spec`差不多，除了没有列宽。注意，当你数第几行的时候，你不需要考虑表头和你通过`pack_rows`添加的那些行，就数那些原生的“内容”行就行。
 
 ```{r}
 kable(dt, "html") %>%
@@ -290,24 +290,24 @@ kable(dt, "html") %>%
 ```
 
 ## 行组
-我们一般做表格时，想表示几行同属一类一般有两种方式，其一是新插入一行大类的名称，然后再给那几行小的加上缩进。其二是在左边再加上一列，通过合并相印的行来表示所属的意思。相对应的，在`kableExtra`里，第一种方法可以用`group_rows`实现，而第二种则可以用`collapse_row`。
+我们一般做表格时，想表示几行同属一类一般有两种方式，其一是新插入一行大类的名称，然后再给那几行小的加上缩进。其二是在左边再加上一列，通过合并相印的行来表示所属的意思。相对应的，在`kableExtra`里，第一种方法可以用`pack_rows`实现，而第二种则可以用`collapse_row`。
 
-### `group_rows`
-我们先说`group_rows`，请看下面这个例子。
+### `pack_rows`
+我们先说`pack_rows`，请看下面这个例子。
 
 ```{r}
 kable(mtcars[1:10, 1:6], "html", caption = "Group Rows") %>%
   kable_styling("striped", full_width = F) %>%
-  group_rows("Group 1", 4, 7) %>%
-  group_rows("Group 2", 8, 10)
+  pack_rows("Group 1", 4, 7) %>%
+  pack_rows("Group 2", 8, 10)
 ```
 
-另一种使用`group_rows`的方法是提供一个目录，用法和`add_header_above`相同。
+另一种使用`pack_rows`的方法是提供一个目录，用法和`add_header_above`相同。
 ```{r, eval = F}
 # Not evaluated. This example generates the same table as above.
 kable(mtcars[1:10, 1:6], "html", caption = "Group Rows") %>%
   kable_styling("striped", full_width = F) %>%
-  group_rows(index = c(" " = 3, "Group 1" = 4, "Group 2" = 3))
+  pack_rows(index = c(" " = 3, "Group 1" = 4, "Group 2" = 3))
 ```
 
 如果你熟悉CSS，你可以自己定义标签行的样式。
@@ -315,8 +315,12 @@ kable(mtcars[1:10, 1:6], "html", caption = "Group Rows") %>%
 ```{r}
 kable(dt, "html") %>%
   kable_styling("striped", full_width = F) %>%
-  group_rows("Group 1", 3, 5, label_row_css = "background: repeating-linear-gradient(45deg, #d9230f, #d9230f 10px, #f96352 10px, #f96352 20px); color: #fff;")
+  pack_rows("Group 1", 3, 5, label_row_css = "background: repeating-linear-gradient(45deg, #d9230f, #d9230f 10px, #f96352 10px, #f96352 20px); color: #fff;")
 ```
+
+说起来，`pack_rows`本来叫`group_rows`，可是`dplyr`0.8加了个同名的function，所以起了个小名，这样大家用起来方便些。
+
+（白学现场：明明都是我先来的）
 
 ### 行的缩进
 有时候只添加缩进就可以变的很有用，这时候你需要`add_indent`。
