--- a/docs/using_kableExtra_in_radix.Rmd
+++ b/docs/using_kableExtra_in_radix.Rmd
@@ -9,11 +9,16 @@ date: "`r Sys.Date()`"
 output: radix::radix_article
 ---
 
+**Starting from kableExtra 1.1.0, you don't need to turn on this option as it's turned on by default for Radix and gitbook, for everyone's convenience. This Documentation is here to help you understand the logics behind the scene. **
+
+**If you want to this kind of native support to other html format, please submit a PR and add the template name to [this line](https://github.com/haozhu233/kableExtra/blob/f3b6aa4bf1648979bbf48bb6f827755387eebed5/R/zzz.R#L23).**
+
 People may find some features in `kableExtra`, such as hovering/striped rows are not working in `radix`. The reason is that `kableExtra` relies on `bootstrap` stylesheet to do these jobs while `radix` doesn't have those css load. Therefore you need to tell `kableExtra` to load the table css for you by setting `options(kableExtra.html.bsTable = T)`. 
+
 
 ```{r, echo = T}
 library(kableExtra)
-options(kableExtra.html.bsTable = T)  
+# options(kableExtra.html.bsTable = T)  # No need for version 1.1.0+
 
 kable(iris[1:6, ], caption = "kable with kableExtra") %>%
   kable_styling(c("striped", "hover", "condensed"), full_width = F,
